<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_project" />

    <item
        android:id="@+id/navigation_navigation"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_navigation" />

    <item
        android:id="@+id/navigation_wx"
        android:icon="@drawable/ic_wx"
        android:title="@string/title_wx"/>

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_mine"
        android:title="@string/title_mine"/>


</menu>