<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ripple_gray">

    <data>
        <import type="android.view.View"/>

        <variable
            name="article"
            type="com.xlu.kotlinandretrofit.bean.Article.Data" />

        <variable
            name="vm"
            type="com.xlu.wanandroidmvvm.ui.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/isTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_tag_top"
                android:textSize="11sp"
                android:textColor="@color/orange_red"
                android:paddingTop="2dp"
                android:paddingBottom="3dp"
                android:layout_marginEnd="10dp"
                android:visibility="@{article.type == 1 ? View.VISIBLE : View.GONE}"/>

            <TextView
                android:id="@+id/tvTagNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="3dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/article_tag_new"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_back_1"
                android:textSize="11sp"
                android:textColor="@color/colorPrimary"
                android:visibility="@{article.fresh ? View.VISIBLE : View.GONE}"/>

            <TextView
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="3dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/text_back_2"
                android:textSize="11sp"
                android:textColor="@color/orange"
                android:text="@{article.superChapterName}"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@{article.niceDate}"
                android:gravity="end|center_vertical"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@{article.title}"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <com.like.LikeButton
                android:id="@+id/ivLike"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                app:anim_scale_factor="2.5"
                app:icon_size="25dp"
                app:icon_type="heart"
                app:is_enabled="true"
                app:liked="@{article.collect}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:like_drawable="@drawable/ic_like_fill"
                app:unlike_drawable="@drawable/ic_like" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:maxLines="1"
                android:text="@{article.superChapterName}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:maxLines="1"
                android:text="/"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:maxLines="1"
                android:text="@{article.chapterName}" />-->

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="11sp"
                android:text="@{article.author.length()==0 ? article.chapterName : article.author}"/>

        </LinearLayout>


        <View
            android:layout_marginTop="10dp"
            android:background="@color/teal_300"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

    </LinearLayout>


    
</layout>